@@ -106,6 +106,9 @@
         <version.bundle.plugin>5.1.1</version.bundle.plugin>
 
         <version.jmh>1.21</version.jmh>
+        <maven.javadoc.plugin.quiet>true</maven.javadoc.plugin.quiet>
+        <maven.compiler.showDeprecation>false</maven.compiler.showDeprecation>
+        <maven.compiler.showWarnings>false</maven.compiler.showWarnings>
     </properties>
 
     <modules>
@@ -135,6 +138,7 @@
                         following setting.
                     -->
                     <doclint>none</doclint>
+                    <quiet>${maven.javadoc.plugin.quiet}</quiet>
                     <!-- @implNote is a non-standard tag and must be declared or the build will fail -->
                     <tags>
                         <tag>
@@ -173,6 +177,20 @@
         </plugins>
         <pluginManagement>
             <plugins>
+                <!-- Compiler -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${version.compiler.plugin}</version>
+                    <configuration>
+                        <!-- fork is needed so compiler args can be used -->
+                        <fork>true</fork>
+                        <failOnError>false</failOnError>
+                        <!-- need to specify directly, for some reason properties are ignored -->
+                        <showDeprecation>${maven.compiler.showDeprecation}</showDeprecation>
+                        <showWarnings>${maven.compiler.showWarnings}</showWarnings>
+                    </configuration>
+                </plugin>
 
                 <!-- Checkstyle -->
                 <plugin>
@@ -674,6 +692,28 @@
                 <module>karaf</module>
             </modules>
         </profile>
+        <profile>
+            <id>jdk18</id>
+            <activation>
+                <jdk>[18,)</jdk>
+            </activation>
+            <properties>
+                <modular.jdk.props>-Djava.security.manager=allow</modular.jdk.props>
+            </properties>
+        </profile>
+		<profile>
+			<id>verbose</id>
+			<activation>
+				<property>
+					<name>findbugs</name>
+				</property>
+			</activation>
+			<properties>
+				<maven.javadoc.plugin.quiet>false</maven.javadoc.plugin.quiet>
+				<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+				<maven.compiler.showWarnings>false</maven.compiler.showWarnings>
+			</properties>
+		</profile>
     </profiles>
 
 </project>
